--- a/.github/workflows/xcodebuild.yml
+++ b/.github/workflows/xcodebuild.yml
@@ -11,6 +11,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Dump file hierarchy
+      run: ls -R
     - name: Xcode version
       run: /usr/bin/xcodebuild -version
     - name: Build
