--- a/.github/workflows/xcodebuild.yml
+++ b/.github/workflows/xcodebuild.yml
@@ -15,9 +15,6 @@ jobs:
       run: ls -R
     - name: Xcode version
       run: /usr/bin/xcodebuild -version
-    # - name: Build
-    #   run: |
-    #   xcodebuild -sdk iphoneos -project fek.io.xcodeproj \
-    #     -configuration Debug -scheme fek.io \
-    #     -derivedDataPath DerivedData \
-    #     -archivePath DerivedData/Archive/fek.io archive
+     - name: Build
+       run: |
+       xcodebuild -sdk iphoneos -project fek.io.xcodeproj -configuration Debug -scheme fek.io
