Adding fix to build script

--- a/.github/workflows/xcodebuild.yml
+++ b/.github/workflows/xcodebuild.yml
@@ -16,5 +16,4 @@ jobs:
     - name: Xcode version
       run: /usr/bin/xcodebuild -version
      - name: Build
-       run: |
-       xcodebuild -sdk iphoneos -project fek.io.xcodeproj -configuration Debug -scheme fek.io
+       run: xcodebuild -sdk iphoneos -project fek.io.xcodeproj -configuration Debug -scheme fek.io
