--- a/.github/workflows/xcodebuild.yml
+++ b/.github/workflows/xcodebuild.yml
@@ -13,6 +13,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install GPG
       run: brew install gnupg
+    - name: Install profile for Build
+      run: ./decrypt_secret.sh
+      env:
+        PASSPHRASE: ${{ secrets.PASSPHRASE }}
     - name: Xcode version
       run: /usr/bin/xcodebuild -version
     # - name: Build
