Adding Build step back into action

--- a/.github/workflows/xcodebuild.yml
+++ b/.github/workflows/xcodebuild.yml
@@ -19,5 +19,5 @@ jobs:
         PASSPHRASE: ${{ secrets.PASSPHRASE }}
     - name: Xcode version
       run: /usr/bin/xcodebuild -version
-    # - name: Build
-    #   run: xcodebuild -sdk iphoneos -project fek.io.xcodeproj -configuration Debug -scheme fek.io
+    - name: Build
+      run: xcodebuild -sdk iphoneos -project fek.io.xcodeproj -configuration Debug -scheme fek.io
